[gd_scene load_steps=4 format=3 uid="uid://bnr7jbm2kbxiu"]

[ext_resource type="Texture2D" uid="uid://v1qy4iw2pjhw" path="res://assets/images/PP.png" id="1"]
[ext_resource type="Script" path="res://src/scripts/MainMenu.gd" id="3"]
[ext_resource type="Theme" uid="uid://kx3eu63a4r6d" path="res://src/PowerPong.tres" id="4"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("3")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 0.00012207
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 12.0
offset_top = 176.0
offset_right = 12.0
offset_bottom = 176.0
texture = ExtResource("1")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 270.0
offset_bottom = -150.0
theme = ExtResource("4")
alignment = 1

[node name="FastMatch" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "FAST MATCH"

[node name="Championship" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CHAMPIONSHIP"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CREDITS"

[connection signal="pressed" from="VBoxContainer/FastMatch" to="." method="_on_FastMatch_pressed"]
[connection signal="pressed" from="VBoxContainer/Championship" to="." method="_on_Championship_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
